<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Heart Rate</string>
    <string name="label_bmp">BMP</string>
    <string name="label_help">Help</string>
    <string name="label_measure">Measure</string>
    <string name="label_history">History</string>
    <string name="label_start">Start</string>
    <string name="label_pause">Pause</string>
    <string name="label_save">Save</string>
    <string name="text_vision">Version 0.0.1</string>
    <string name="text_rate_original">000</string>
    <string name="text_save_heart">Detailed measurement results</string>
    <string name="title_the_latest_measurement">The latest measurement</string>
    <string name="title_before_training">Before training</string>
    <string name="title_after_training">After training</string>
    <string name="title_heavy_training">Heavy training</string>
    <string name="title_rested">Rested</string>
    <string name="title_time_notification">08:00</string>
    <string name="title_app_review">App reviews</string>
    <string name="title_language">Change language</string>
    <string name="title_measurement_time">Measurement time</string>
    <string name="title_remind">Remind when the time to measure</string>
    <string name="title_general">General</string>
    <string name="title_delete_ask">Do you want to delete memo?</string>
    <string name="title_delete">Delete</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_choose_the_language">Choose the language</string>
    <string name="title_vietnamese">Vietnamese</string>
    <string name="title_english">English</string>
    <string name="title_japanese">Japanese</string>
    <string name="title_ok">Ok</string>
    <string name="title_note">Note</string>
    <string name="title_status">Status</string>
    <string name="title_show_all">Show all</string>
    <string name="title_notification">Time to measure heart rate</string>
    <string name="title_help">Put your finger on the camera and press the start button</string>
    <string name="title_measuring_heart_rate">MEASURING HEART RATE</string>
    <string name="title_please_put_your_hand_on_the_camera">Please put your hand on the camera</string>
    <string name="title_add_data_successfully">Add data successfully</string>
    <string name="title_add_data_failed">Add data failed</string>
    <string name="title_guideline">Please read carefully before using
\n\n* Open the app and hold your index finger to cover the camera\'s lens and flash.
\n* Do not hold it too tight or it will cause the machine to not flow resulting in inaccurate readings.
\n* After 10 seconds there will be results of that time, wait for the next 15 seconds to get the final measurement results</string>
    <string name="title_guideline_note">
Note: This is not a medical product. The calculation information is for reference only for personal health.</string>
</resources>
