<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhile">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_56"
        android:layout_margin="@dimen/dp_24"
        android:background="@drawable/bg_rectangle"
        android:text="@string/label_start"
        android:textColor="@color/colorWhile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHelp" />

    <ImageView
        android:id="@+id/imageHeart"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_gravity="center"
        android:src="@drawable/ic_heart_dark"
        app:layout_constraintBottom_toTopOf="@id/textRateNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarTime"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/bg_circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/bg_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rate_original"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/sp_40"
        app:layout_constraintBottom_toBottomOf="@id/progressBarTime"
        app:layout_constraintEnd_toEndOf="@id/progressBarTime"
        app:layout_constraintStart_toStartOf="@id/progressBarTime"
        app:layout_constraintTop_toTopOf="@id/progressBarTime"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minLines="2"
        android:padding="@dimen/dp_16"
        android:text="@string/title_help"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_bmp"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRateNumber" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/title_the_latest_measurement"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRateLast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
