<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhile"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxNotification"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_16"
                android:buttonTint="@color/colorRed"
                android:gravity="center"
                android:paddingEnd="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAppName"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageViewSelectTime"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_16"
                android:padding="@dimen/dp_14"
                android:src="@drawable/ic_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNotification"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageViewLanguage"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:padding="@dimen/dp_14"
                android:src="@drawable/ic_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTimeSelect"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewLanguage"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_56"
                android:background="@color/colorRed"
                android:gravity="center|start"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/app_name"
                android:textColor="@color/colorWhile"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewNotification"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/colorWhileDark"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/title_remind"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@id/checkBoxNotification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAppName"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/colorWhileDark"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/title_measurement_time"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@id/imageViewSelectTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNotification"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textViewTimeSelect"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:text="@string/title_time_notification"
                android:layout_marginStart="@dimen/dp_24"
                android:background="@color/colorWhileDark"
                android:gravity="start|center"
                android:paddingStart="@dimen/dp_16"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@id/imageViewSelectTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTime"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/colorWhileDark"
                android:gravity="center|start"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/title_language"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewLanguage"
                app:layout_constraintTop_toBottomOf="@id/textViewTimeSelect"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/colorWhileDark"
                android:gravity="center|start"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/title_app_review"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewLanguage"
                app:layout_constraintTop_toBottomOf="@id/imageViewLanguage"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

    <include
        layout="@layout/partial_tab_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.drawerlayout.widget.DrawerLayout>
